# gf

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  gf2.cpp  san_ignore_list.txt
.github/tools/: README.md  build-reproducible.sh  reproducible.Dockerfile
.github/workflows/: linux.yml  macos.yml  release.yml
doc/: contributing.md  improvements.md  luigi.md  plugins.md  profiler_instructions.txt  release.md
examples/: CMakeLists.txt  calc.cpp  donut.cpp  gf2_config.ini  gf_testprog.cpp  luigi_doc_examples.cpp  luigi_example.cpp  tinyraytracer.cpp
extensions_v5/: extensions.cpp  gf_profiling.c
src/: clangd.hpp  gf.cpp  gf.hpp  gf2.cpp  gf2.hpp  luigi.cpp  luigi.hpp  luigi2.cpp  luigi2.h  luigi2.hpp  main.cpp  re.hpp  re_cpp.cpp  re_gdb.cpp  regex.cpp  regex.hpp  themes.hpp  utils.hpp  windows.cpp
src/re/: cpp.cpp  gdb.cpp  misc.cpp  re.hpp
tests/: CMakeLists.txt  clangd_tests.cpp  luigi_tests.cpp  re_cpp_tests.cpp  re_gdb_tests.cpp
tests/reference_files/: test_input.cpp
